corrected BOZH's chapters *) removed typos and reformatted sentences in project management *) removed typos, reformatted paragraphs and changed formatting in fuel consumption analysis

--- a/diplomarbeit/sections/ch1_introduction/projekt-management.tex
+++ b/diplomarbeit/sections/ch1_introduction/projekt-management.tex
@@ -2,42 +2,32 @@
 \subsection{Projekt Management}
 
 Da BestShift keiner konkreten Angabe unterlag,
-mussten wir uns auf Änderungen im letzten Moment gefasst machen. Das Team 
-durfte über den Umfang des Projektes selbst entscheiden.
-immer größer. Aufgrunddessen haben wir uns auf eine agile Projektmanagementmethode fixiert. 
-Wir haben uns für SCRUM entschieden, da es Zielführendes Arbeiten unterstützt und die inkrementelle Entwicklung
-von Software ermöglicht. Ausserdem ist Transparenz ein sehr wichtiger Punkt, da unser PL immer auf dem neuesten
-Stand sein muss. Diese Transparenz ermöglicht es, Schwachstellen aufzudecken und ist für die produktivität von SCRUM bekannt.
+mussten wir uns auf kurzfristige Änderungen gefasst machen, da die Herangehensweise der Implementierung der fahrzeugtechnischen Aspekte für uns noch nicht bekannt waren.
+Das Team durfte über den Umfang des Projektes, bis auf kleine Vorgaben, selbst entscheiden.
+Aufgrund dessen haben wir uns für eine agile Projektmanagementmethode entschieden. 
+Wir haben uns für SCRUM entschieden, da es zielführendes Arbeiten unterstützt und die inkrementelle Entwicklung von Software ermöglicht. 
+Ausserdem ist Transparenz ein sehr wichtiger Punkt, da unser Projektleiter immer auf dem aktuellsten Stand sein muss. Diese Transparenz ermöglicht es, Schwachstellen schnell aufzudecken und ist wesentlich für die Produktivität von SCRUM.
 Gezieltes Risikomanagement kann durch SCRUM ebenfalls betrieben werden. 
 
-
 \subsubsection{SCRUM}
-Unter agilem Projektmanagement, insbesondere Scrum, gibt es den sogenannten
-Sprint; ein zeitlich Begrenzter Arbeitsaufwand. Ein Spirnt wird logischerweise
-im Vorhinein geplant, wobei man Wert auf den ¨scope of work¨(zu erledigende
-Arbeitspakete) legt. Zusätzlich dazu, gibt es zum Beginn einer jeden
-Arbeitsphase ein kleines Meeting (Daily Scrum Meeting). In diesem Meeting
-erklärt jedes Mitglied was es in der letzten Arbeitsphase gearbeitet hat, was es in
-dieser Arbeitsphase tun wird und welche Probleme es beim Arbeiten gegeben
-hat.
-Anders als bei der traditionellen Variante hat Scrum den großen Vorteil das neue
-User Stories, und damit euch neue Funktionen der Software, on-the-go hinzugefügt
-werden können. Grundsätzlich kann man sagen, dass Scrum Sinnvoll ist,
-wenn man mögliche Veränderungen anstrebt.
+Unter agilem Projektmanagement, insbesondere SCRUM, gibt es den sogenannten
+Sprint; ein zeitlich Begrenzter Arbeitsaufwand. Ein Sprint wird logischerweise im vorhinein geplant, wobei man Wert auf den \textit{scope of work} (zu erledigende Arbeitspakete) legt. 
+Zusätzlich dazu, gibt es zum Beginn einer jeden
+Arbeitsphase ein kleines stand-up Meeting (Daily Scrum Meeting). In diesem Meeting erklärt jedes Mitglied was es in der letzten Arbeitsphase gearbeitet hat, was es in dieser Arbeitsphase tun wird und welche Probleme es beim Arbeiten gegeben hat.
+Anders als bei der traditionellen Variante hat SCRUM den großen Vorteil, dass neue User Stories, und damit euch neue Funktionen der Software, on-the-go, also während das Projekt bereits läuft, hinzugefügt werden können. Grundsätzlich kann man sagen, dass SCRUM sinnvoll ist, wenn man mögliche Veränderungen anstrebt.
 
 \subsubsection{Artefakte und Sprints}
-Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich von PL abgenommen wurden.
+Das Diplomprojekt BestShift wurde von Anfang an in 5 Sprints aufgeteilt, welche pünktlich vom Proejektleiter abgenommen wurden.
 \begin{description}
-\item Sprint 01 18.Nov 2015 - 09.Dez 2015
-\item Sprint 02 09.Dez 2015 - 13.Jan 2016
-\item Sprint 03 13.Jan 2016 - 10.Feb 2016
-\item Sprint 04 10.Feb 2016 - 02.März 2016
-\item Sprint 05 02.März 2016 - 14.März 2016
+\item Sprint 01: 18.Nov 2015 - 09.Dez 2015
+\item Sprint 02: 09.Dez 2015 - 13.Jan 2016
+\item Sprint 03: 13.Jan 2016 - 10.Feb 2016
+\item Sprint 04: 10.Feb 2016 - 02.März 2016
+\item Sprint 05: 02.März 2016 - 14.März 2016
 \end{description}
 
 Diese Sprints wurden durch die sogenannten Abnahmeprotokolle verifiziert.
-Zu jedem Sprint gab es ebenfalls Sprintdokumentationen, die umschrieben was konkret 
-während des Sprints passiert ist.
+Zu jedem Sprint gab es ebenfalls Sprintdokumentationen, die umschreibt was konkret während des Sprints passiert ist.
 
 
 \clearpage % DO NOT REMOVE
