Changed various typos and reformatting, see below *) programming languages:  Removed typos and indented itemize *) device compatability: added vowel mutations and inserted author *) android app: removed typos, restructuring and reformatting image

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/device-compability.tex
@@ -1,13 +1,13 @@
-\lfoot{Autor: Who?}
+\lfoot{Autor: Fitim Faiku}
 \subsubsection{Kompatible Geräte}
 \label{subsec:device-compability}
 
 Android kann auf vielen verschiedenen Plattformen, von Handys zu Tabletts laufen.
 Als Entwickler bietet die Palette von Geräten ein enormes potenzielles Publikum.
 Um auf all diesen Oberflächen reibungslos zu funktionieren sollte es einige Feature Variabilitäten tolerieren und eine 
-flexlible Benutzeroberflaeche zur Verfuegung stellen. 
+flexible Benutzeroberfläche zur Verfügung stellen. 
 
-Um das zu ermöglichen bietet Android die möglichkeit, verschiedene XML Layouts zu erstellen um verschiedene Bildschirmgrößen anzusprechen.
+Um das zu ermöglichen bietet Android die Möglichkeit, verschiedene XML Layouts zu erstellen um verschiedene Bildschirmgrößen anzusprechen.
 
 Beim Programmieren der App, kann auch die Minimum und Maximum Version des Devices eingestellt werden, wobei wir hier eine größere Menge an Nutzern erzielen wollen. 
 
