--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
@@ -2,80 +2,72 @@
 \subsubsection{Mitwirkende Programmiersprachen}
 \label{subsec:androidsprachen}
 \textbf{Entwicklungsumgebung\newline}
-Android Studio ist die offizielle Entwicklungsumgebung für Android Applikationen.
-Android Studio basiert auf IntelliJ IDEA und ersetzt das Android Developer Tool für Eclipse, da dieses seit Ende
-2015 keinen Support mehr erhält. Der Funktionsumfang des Android Studios sind:
+Android Studio ist die offizielle Entwicklungsumgebung für Android\texttrademark Applikationen, welche direkt von Google\texttrademark unterstützt wird.
+Android Studio basiert auf IntelliJ IDEA und ersetzt das Android Developer Tool für Eclipse, da dieses seit Ende 2015 keinen Support mehr durch Google\texttrademark erhält. Der Funktionsumfang von Android Studio ist:
 \begin{itemize}
-\item Build-Management-Automatisierung: Basierend auf Gradle, Entwicklungsmöglichkeiten für verschiedene Gerätetypen (Tablets etc.)
-\item Android Wear/Android TV: Stets auf dem neuesten Stand der Technik können Applikationen für neue Geräte implementiert werden.
-\item Sourcecode-Editor(IntelliJ): Textbearbeitungsoberfläche mit einem Kompiliermechanismus
-\item Smart-Editing: Hilfreiche Vorschläge zur Vervollständigung von Quellcode
-\item Code-Refactoring: Formatiert den Quellcode
-\item Open-Source Entwicklung: Frei Verfügbarer Quellcode
-\item GUI-Builder: Einfache Graphische Oberflächenentwicklung mittels Drag \& Drop
-\item Zugriff auf Google Dienste: Die Möglichkeit besteht, Google Dienste innerhalb der IDE zu konfigurieren und in der App anzuwenden
-\item ProGuard: Automatische App-Signierung
+	\item Build-Management-Automatisierung: Basierend auf Gradle, Entwicklungsmöglichkeiten für verschiedene Gerätetypen (Tablets etc.)
+	\item Android Wear/Android TV: Stets auf dem neuesten Stand der Technik können Applikationen für neue Geräte implementiert werden.
+	\item Sourcecode-Editor (IntelliJ): Textbearbeitungsoberfläche mit einem Kompiliermechanismus
+	\item Smart-Editing: Hilfreiche Vorschläge zur Vervollständigung von Quellcode
+	\item Code-Refactoring: Formatiert den Quellcode
+	\item Open-Source Entwicklung: Frei verfügbarer Quellcode
+	\item GUI-Builder: Einfache graphische Oberflächenentwicklung mittels Drag \& Drop
+	\item Zugriff auf Google Dienste: Die Möglichkeit besteht, Google Dienste innerhalb der IDE zu konfigurieren und in der App anzuwenden
+	\item ProGuard: Automatische App-Signierung
 \end{itemize}
 
 \textbf{Systemvoraussetzungen\newline}
 \begin{itemize}
-\item mind. 2GB RAM, 4 GB empfohlen
-\item mind. 400MB freien Speicherplatz (1GB für die Android SDK)
-\item Java Development Kit 7 oder höher
-\item mind. 1280*800 Pixel Bildschirmauflösung
-
+	\item mind. 2GB RAM, 4 GB empfohlen
+	\item mind. 400MB freien Speicherplatz (1GB für die Android SDK)
+	\item Java Development Kit 7 oder höher
+	\item mind. 1280*800 Pixel Bildschirmauflösung
 \end{itemize}
 \textbf{Programmiersprachen\newline}
 Bei den Programmiersprachen bestand die Auswahl zwischen der Programmiersprache Python, 
-native Javaentwicklung und Hybrid Java in Verbindung mit HTML.
-Dabei fiel für uns vor allem aufgrund von der Verbindung mit einer Webapplikation die Wahl auf eine hybride Applikation. 
- 
-
+nativer Javaentwicklung und Hybrid-Java in Verbindung mit HTML5.
+Dabei fiel für uns vor allem aufgrund der Verbindung mit einer Webapplikation die Wahl auf eine hybride Applikation. 
 
 \clearpage
 \subsection{Vergleich Java und Python}
 \subsubsection{Java}
 \begin{itemize}
-\item Charakteristik: Mehrfachverwendung/Mehrfachvererbung eingeschränkt, stark typisiert
-\item Syntax: Vor der Kompilierung sehr streng, komplizierte Polymorphie
-\item Dokumentation: Ausführliche Dokumentation der Methoden in Form von Java API
-\item Community: Java ist sehr weit verbreitet, rund 3 Milliarden Geräte können Java auführen.
-\item Usage: plattformunabhängige Programme, FAT-Client-Anwendungen
-\item Können im Team: 5/5*, jahrelange Erfahrung innerhalb des Teams
+	\item Charakteristik: Mehrfachverwendung/Mehrfachvererbung eingeschränkt, stark typisiert
+	\item Syntax: Vor der Kompilierung sehr streng, komplizierte Polymorphie
+	\item Dokumentation: Ausführliche Dokumentation der Methoden in Form von Java API
+	\item Community: Java ist sehr weit verbreitet, rund 3 Milliarden Geräte können Java ausführen.
+	\item Usage: plattformunabhängige Programme, FAT-Client-Anwendungen
+	\item Können im Team: 5/5*, jahrelange Erfahrung innerhalb des Teams
 \end{itemize}
 
 \subsubsection{Python}
 \begin{itemize}
-\item Charakteristik: Erstellung von Variablen nicht Datentyp abhängig, dynamisch/schwach typisiert.
-\item Syntax: erhöhte Lesbarkeit im Vergleich zu allen anderen, aber ungewohnter zu schreiben als Java
-\item Dokumentation: innerhalb der Python API vorhanden.
-\item Community: Die Community von Python ist ständig am wachsen, ca. 5 Millionen Geräte verwenden Python.
-\item Usage: Back-End, äußerst schnelle Entwicklung(Rapid Application Development)
-\item Können im Team: 3/5*, Team konnte erst geringe Erfahrung mit Python sammeln
+	\item Charakteristik: Erstellung von Variablen nicht Datentyp abhängig, dynamisch/schwach typisiert.
+	\item Syntax: erhöhte Lesbarkeit im Vergleich zu allen anderen, aber ungewohnter zu schreiben als Java
+	\item Dokumentation: innerhalb der Python API vorhanden.
+	\item Community: Die Community von Python ist ständig am wachsen, ca. 5 Millionen Geräte verwenden Python.
+	\item Usage: Back-End, äußerst schnelle Entwicklung (Rapid Application Development)
+	\item Können im Team: 3/5*, Team konnte erst geringe Erfahrung mit Python sammeln
 \end{itemize}
 
-Aus den Oben genannten Punkten filtern wir heraus, dass Java die bessere Lösung für die Android App wäre. 
+Aus den oben genannten Punkten filtern wir heraus, dass Java die bessere Lösung für die Android App wäre. 
 Die komplette Beherrschung von Python würde einige Wochen dauern. 
 Da diese Zeit im Rahmen des Diplomprojektes nicht vorhanden ist, wäre die App-Entwicklung in Python nicht zielführend. 
-Außerdem benutzen Android-Smartphones die Dalvik-VM, welche Java Class Files exekutiert, 
-wodurch Java nativ auf Android realisiert wird im Gegensatz zu Python. 
-Dementsprechend wird hier massiv an Umkompilierungszeit gespart, welche für die Echtzeit-Darstellung des Verbrauchs, 
-Kamm'schen Kreises und Schaltvorschlags essentiell ist.
+Außerdem benutzen Android-Smartphones die Dalvik-VM, welche Java Class Files ausführt, wodurch Java nativ auf Android realisiert wird im Gegensatz zu Python. 
+Dementsprechend wird hier massiv an Umkompilierungszeit gespart, welche für die Echtzeit-Darstellung des Verbrauchs, Kamm'schen Kreises und Schaltvorschlags essentiell ist.
 
 \clearpage
-\subsection{Java-Frameworks(APP)}
+\subsection{Java-Frameworks (APP)}
 \textbf{Frameworks im Allgemeinen\newline}
 Ein Softwareentwickler stößt relativ schnell während seiner Ausbildung
-auf das Wort \"Framework\". Die Übersetzung ins Deutsche entspricht der selben
-Bedeutung eines Bilderrahmens oder Gerüstes.
-Ein Framework ist ein Vorgefertigter Baustein, der das Programmieren erleichtern und dadurch
-Zeit einsparen soll.
+auf das Wort \"Framework\". Die Übersetzung ins Deutsche entspricht einem Bilderrahmen oder eines Gerüstes.
+Ein Framework ist ein vorgefertigter Baustein, der das Programmieren erleichtern und dadurch Zeit sparen soll.
 Vorteile von Frameworks:
 \begin{itemize}
-\item Ein Framework besitzt genormte Schnittstellen wie zum Beispiel zu Datenbanken, welche die Kommunikation vereinfacht. 
-\item Wiederverwendung von Programmen 
-\item Erleichterung der Programmierarbeit
-\item Einsparung von viel Zeit
+	\item Ein Framework besitzt einheitliche Schnittstellen wie zum Beispiel zu Datenbanken, welche die Kommunikation vereinfachen. 
+	\item Wiederverwendung von Programmen 
+	\item Erleichterung der Programmierarbeit
+	\item Einsparung von viel Zeit
 \end{itemize}
 
 \begin{table}[!htb]
@@ -96,12 +88,12 @@ Vorteile von Frameworks:
 }
 \end{table}
 
-Im Großen und Ganzen ist MPAndroidChart das Beste was man wählen kann, da es eins der besten Dokumentationen hat, weiterhin hat es auch eine sehr gute Community, sehr viel gut gecodete und Dokumentierte Beispiele und ist auch für Erweiterung gut , da die App auch auf einem IPhone programmiert werden kann. 
-AChartEngine hat eine gute Dokumentation doch eine eher schwächere Community und ist leider nicht sehr aktuell. 
-HelloChart hat eins der schlechtesten Dokumentationen, gar keine Community und sehr wenig gecodete Beispiele, sie sind aber sehr Aktuell wenn es um die Versionen geht .
+Im Großen und Ganzen ist MPAndroidChart die beste Wahl, da es eine der besten Dokumentationen hat, weiterhin hat es auch eine sehr gute Community, sehr viel gut gecodete und dokumentierte Beispiele und kann  auch erweitert werden, da das Framework auch auf iOS verwendet werden kann. 
+AChartEngine hat eine gute Dokumentation, doch eine eher schwache Community und ist leider nicht aktuell. 
+HelloChart hat eine der schlechtesten Dokumentationen, gar keine Community und sehr wenig gecodete Beispiele, diese sind aber sehr aktuell.
  
 
-\subsection{Python-Frameworks(Web-Applikation)}
+\subsection{Python-Frameworks (Web-Applikation)}
 
 \begin{table}[!htb]
 \centering
@@ -122,62 +114,52 @@ Python \end{tabular} & Python & Python & \begin{tabular}[c]{@{}l@{}} \end{tabula
 }
 \end{table}
 
-Plotly hat eins der Besten Dokumentationen die wir bis jetzt gesehen haben. Sie haben eine sehr große Auswahl an Charts, welche mittels Codesnippets zur Verfügung stehen. 
-Weiters haben sie Tutorials zur Verfügung gestellt, Dokumentationen unterteilt in Kapitel. Weiterhin ist das Framework sehr weit entwickelt worden.                  
-Eins der Nachteile wäre, dass wir keine SVG Images exportieren können. Für einen Betrag von 20euro Monatlich ist auch das möglich. 
-Wir sind zum Entschluss gekommen, dass Plotly das Beste Framework für unsere Webapplikation sein könnte, 
-da sehr viel Dokumentiert wurde, außerdem ist es das am leichtesten erlernbare Tool.
+Plotly hat eine der besten Dokumentationen die wir bis jetzt gesehen haben. Es hat eine sehr große Auswahl an Charts, welche mittels Codesnippets zur Verfügung stehen. 
+Weiters stehen Tutorials zur Verfügung und die Dokumentationen ist leicht lesbar. Weiterhin ist das Framework sehr fortgeschritten und aktuell.                  
+Eins der Nachteile wäre, dass wir keine SVG Images exportieren können. Wenn Kosten von €20,-/Monat in Kauf genommen werden, ist auch das möglich. 
+Wir sind zum Entschluss gekommen, dass Plotly das beste Framework für unsere Webapplikation ist, da sehr viel dokumentiert ist, außerdem ist es das am leichtesten erlernbare Tool.
 
 
 \clearpage
 \subsection{Hybrid-Frameworks}
-Es fällt die Auswahl auf eines der folgenden Frameworks:
-\begin{itemize}
-\item \hyperref[Codename One]{https://www.codenameone.com/pricing.html} Java
-\item \hyperref[Firebase]{https://www.firebase.com/pricing.html} Android/iOS/JavaScript SDK
-\item \hyperref[appmethod]{http://www.appmethod.com/de/pricing} C++
-\item \hyperref[ionic]{http://ionicframework.com/} HTML, CSS, JS; Built with Sass, optimized with AngularJS
+	Es fällt die Auswahl auf eines der folgenden Frameworks:
+	\begin{itemize}
+	\item \hyperref[Codename One]{https://www.codenameone.com/pricing.html} Java
+	\item \hyperref[Firebase]{https://www.firebase.com/pricing.html} Android/iOS/JavaScript SDK
+	\item \hyperref[appmethod]{http://www.appmethod.com/de/pricing} C++
+	\item \hyperref[ionic]{http://ionicframework.com/} HTML, CSS, JS; Built with Sass, optimized with AngularJS
 \end{itemize}
 
-\textbf{Dokumentation}
+\textbf{Dokumentation\newline}
 Alle sind gut dokumentiert, Codename One und Firebase bieten sogar eine eingeschränkte kostenlose Option.
-ionic ist von sogar OpenSource und hat eine tolle einsteigerfreundliche Dokumentation
+ionic ist sogar OpenSource und hat eine tolle einsteigerfreundliche Dokumentation.
 
 \textbf{Usage/Charakteristika}
 \begin{itemize}
-\item Codename One bietet eine Java SDK um eine App welche auf iOS, Windows oder Android lauffähig ist
-\item Firebase bietet eine Android, iOS und JavaScript SDK um eine vielseitig kompatible mobile oder web Applikation zu entwickeln. 
-\item Mittels appmethod kann man mit einer C++ Codebasis eine Android, iOS, MacOSX und sogar eine Windows Applikation entwickeln.
-\item Bei ionic wird die App von einer mobil-freundlichen HTML, CSS und JS Library entwickelt, während sie dann mit Sass auf das jeweilige App Format konvertiert wird und mit Angular JS optimiert wird. 
+	\item Codename One bietet eine Java SDK um eine App welche auf iOS, Windows oder Android lauffähig ist
+	\item Firebase bietet eine Android, iOS und JavaScript SDK um eine vielseitig kompatible mobile oder web Applikation zu entwickeln. 
+	\item Mittels appmethod kann man mit einer C++ Codebasis eine Android, iOS, MacOSX und sogar eine Windows Applikation entwickeln.
+	\item Bei ionic wird die App von einer mobil-freundlichen HTML, CSS und JS Library entwickelt, während sie dann mit Sass auf das jeweilige App Format konvertiert wird und mit Angular JS optimiert wird. 
 \end{itemize}
 
 \textbf{Community}
 \begin{itemize}
-\item Codename One bietet einen Blog, eine in die Webseite eingebundene Google Discussion und einen Stackoverflow codenameone-Tag.
-\item Firebase hat einen Blog und über 25000 Facebook likes, aber sonst leider nur ein GitHub um Issues zu publizieren und eigene Support Emails, also ist hier alles sehr zentralisiert gesteuert. 
-\item appmethod hat eine Github page, welche aber ebenfalls eher durch den Support mit Issues gefüllt wird und verlinkt für die Community auf die Homepage der Mutterfirma \"Embarcadero\", welche auch ein Forum anbieten
-\item ionic hat eine großes community-driven Forum, welches bei vielen Beiträgen mehrere hundert Antworten als Wissenserweiterung anbietet.
+	\item Codename One bietet einen Blog, eine, in die Webseite eingebundene Google Discussion, und einen Stackoverflow codenameone-Tag.
+	\item Firebase hat einen Blog und über 25000 Facebook likes, aber sonst leider nur ein GitHub um Issues zu publizieren und eigene Support Emails, also ist hier alles sehr zentralisiert gesteuert. 
+	\item appmethod hat eine Github page, welche aber ebenfalls eher durch den Support mit Issues gefüllt wird und verlinkt für die Community auf die Homepage der Mutterfirma \"Embarcadero\", welche auch ein Forum anbieten
+	\item ionic hat eine großes community-driven Forum, welches bei vielen Beiträgen mehrere hundert Antworten als Wissenserweiterung anbietet.
 \end{itemize}
 
 \textbf{Performance}
 \begin{itemize}
-\item Codename One verwendet SaaS für die Kompilierung der App und verwendet eine VM die Java zu C für iOS macht. Die Performance ist hoch da es die nativen gaming Plattformen des jeweiligen OS verwendet. 
-\item Firebase verwendet die Forge UI und ist dadurch auf große Datensätze sogar ausgelegt, nur muss man achten diese zu denormieren.
-\item Da appmethod C++ als Programmiersprache verwendet, welche direkt auf der CPU laufen kann, appmethod performant.
-\item In einem Post von Sep.2014 wird ionic als weniger performant gesehen. Document Object Model (DOM) sollten möglichst selten angezeigt werden um gute Performance und Seite zu Seite Wechsel sollten auch unterlassen werden. Allerdings scheint das ionic Team sehr Performance fokussiert zu sein.
-\end{itemize}
-
-\textbf{Last Update}
-\begin{itemize}
-\item Codename One: neuester Blogbeitrag: 14.10.2015
-\item Firebase: Github letzter Commit: vor 14 Stunden
-\item appmethod: Github letzter Commit: 21.09.2015
-\item ionic: Github letzter Commit: 14.10.2015
+	\item Codename One verwendet SaaS für die Kompilierung der App und verwendet eine VM die Java zu C für iOS macht. Die Performance ist hoch da es die nativen gaming Plattformen des jeweiligen OS verwendet. 
+	\item Firebase verwendet die Forge UI und ist dadurch auf große Datensätze sogar ausgelegt, nur muss man achten diese zu denormieren.
+	\item Da appmethod C++ als Programmiersprache verwendet, welche direkt auf der CPU laufen kann, ist appmethod performant.
+	\item In einem Post von Sep.2014 wird ionic als weniger performant gesehen. Document Object Model (DOM) sollten möglichst selten angezeigt werden um gute Performance und Seite-zu-Seite-Wechsel sollten auch unterlassen werden. Allerdings scheint das ionic Team sehr Performance-fokussiert zu sein.
 \end{itemize}
 
 \textbf{Frameworks Conclusio}
 Es war grundsätzlich für uns bereits von Beginn an klar dass wir ein Framework verwenden würden, allerdings tendieren wir mittlerweile in die Richtung eines hybriden Frameworks. Codename One und appmethod fallen aufgrund ihrer mangelnden kostenfreien Option definitiv weg. Ionic und Firebase scheinen schon weit interessanter.
 Da muss man sich allerdings eine Grundsatzfrage stellen - möchten wir eine HTML hybride App bauen oder nur eine cross-platform App? Denn für eine HTML hybride App müssten wir Ionic verwenden, auch wenn einige von uns dafür definitiv AngularJS und JS im allgemeinen wiederholen müssten.
-
 
 \clearpage % DO NOT REMOVE
