changed subsubsubsections for textbf

--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/programmiersprachen.tex
@@ -30,7 +30,7 @@ Dabei fiel für uns vor allem aufgrund der Verbindung mit einer Webapplikation d
 
 \clearpage
 \subsubsection{Vergleich Java und Python}
-\subsubsubsection{Java}
+\textbf{Java\newline}
 \begin{itemize}
 	\item Charakteristik: Mehrfachverwendung/Mehrfachvererbung eingeschränkt, stark typisiert
 	\item Syntax: Vor der Kompilierung sehr streng, komplizierte Polymorphie
@@ -40,7 +40,7 @@ Dabei fiel für uns vor allem aufgrund der Verbindung mit einer Webapplikation d
 	\item Können im Team: 5/5*, jahrelange Erfahrung innerhalb des Teams
 \end{itemize}
 
-\subsubsubsection{Python}
+\textbf{Python\newline}
 \begin{itemize}
 	\item Charakteristik: Erstellung von Variablen nicht Datentyp abhängig, dynamisch/schwach typisiert.
 	\item Syntax: erhöhte Lesbarkeit im Vergleich zu allen anderen, aber ungewohnter zu schreiben als Java
