--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
@@ -2,23 +2,20 @@
 \subsubsection{Schadstoffausstoss}
 \label{subsec:schadstoffausstoss}
 
-Bei einem Verbrennungsmotor wird ein Kraftstoff-Luft-Gemisch in einme Zylinder entzündet und verbrannt.
-Alle Verbrennungsmotoren wiederholen in einem Kreisprozess, ständig den Arbeitszyklus, der aus vier Arbeitsschritten besteht.
+Bei einem Verbrennungsmotor wird ein Kraftstoff-Luft-Gemisch in einem Zylinder gezündet und verbrannt.
+Alle Verbrennungsmotoren wiederholen dies in einem Kreisprozess, ständig im Arbeitszyklus, der aus vier Arbeitsschritten besteht.
 
-\textbf{1. Ansaugen}
-Ausstoßen und Ansaugen dienen dem Gangwechsel, das heißt, dem Austausch von Abgas(Ausstoßen) gegn Frischgas (Ansaugen). Hierfür ist die Motorsteuerung zuständig.
-\newline
-\textbf{2. Verdichten}
+\textbf{1. Ansaugen\newline}
+Ausstoßen und Ansaugen dienen dem Gangwechsel, das heißt, dem Austausch von Abgas(Ausstoßen) gegen Frischgas (Ansaugen). Hierfür ist die Motorsteuerung zuständig.
+\textbf{2. Verdichten\newline}
 Verdichten und Arbeiten dienen der Umwandlung von chemischer Energie(Verbrennung des Gemisches) über thermische Energie (Wärme) und potentielle Energie(Druck) in mechanische Energie (Drehmoment).
 
-\newline
-\textbf{3. Arbeiten}
+\textbf{3. Arbeiten\newline}
 Das wird oft als Takt bezeichnet.
 
-\newline
-\textbf{4. Ausstoßen }
-Der sich nach oben bewegender Kolben schiebt im vierten Takt die verbrannten Abgase aus dem Zylinder durch den Auspuff in die Umwelt. 
-Die Abgastemperatur liegt bei 800 grad im Leerlauf, bis 1000 grad bei Vollast. 
+\textbf{4. Ausstoßen \newline}
+Der sich nach oben bewegende Kolben schiebt im vierten Takt die verbrannten Abgase aus dem Zylinder durch den Auspuff in die Umwelt. 
+Die Abgastemperatur liegt bei 800 Grad im Leerlauf, bis 1000 Grad bei Vollast. 
 \newline 
 
 
