--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -1,4 +1,4 @@
-\lfoot{Autor: Fitim Faiku}
+\lfoot{Autor: Faiku Fitim}
 \subsection{Das Projekt BestShift}
 
 BestShift ist ein Projekt das dem Fahrer als oberstes Ziel mehr Informationen während- und nach der Fahrt bieten soll. 
