--- a/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/can-bus/schadstoffausstoss.tex
@@ -1,4 +1,4 @@
-\lfoot{Autor: Fitim Faiku}
+\lfoot{Autor: Faiku Fitim}
 \subsubsection{Schadstoffausstoss}
 \label{subsec:schadstoffausstoss}
 
@@ -20,6 +20,7 @@ Das wird oft als Takt bezeichnet.
 Der sich nach oben bewegender Kolben schiebt im vierten Takt die verbrannten Abgase aus dem Zylinder durch den Auspuff in die Umwelt. 
 Die Abgastemperatur liegt bei 800 grad im Leerlauf, bis 1000 grad bei Vollast. 
 \newline 
+
 
 
 \clearpage % DO NOT REMOVE
