--- a/diplomarbeit/sections/ch3_implementierung/android-app.tex
+++ b/diplomarbeit/sections/ch3_implementierung/android-app.tex
@@ -1,4 +1,4 @@
-\lfoot{Autor: Fitim Faiku}
+\lfoot{Autor: Faiku Fitim}
 \subsection{Android App}
 
 Die Android App wurde mittels Java erstellt wobei als Programmieroberfläche Android Studio verwendet wurde.
@@ -65,7 +65,11 @@ Als nächstes haben wir mithilfe der MPAndroidchart Library einige Graphen erste
 
  
 
-
+\begin{wrapfigure}{r}{0.6\textwidth}
+	\centering
+	\includegraphics[width=0.5\textwidth]{images/Liniendiagramm}
+	\caption{Beschleunigungskräfte Längstrichtung }
+\end{wrapfigure}
 
 
 
