--- a/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
+++ b/diplomarbeit/sections/ch2_technische_grundlagen/android-dev/app-fundam.tex
@@ -1,4 +1,4 @@
-\lfoot{Autor: Who?}
+\lfoot{Autor: Faiku Fitim}
 \subsubsection{Grundsätze einer Android Applikation}
 \label{subsec:aapp-fundam}
 
@@ -24,7 +24,5 @@ HTML5 verwendet die Standard web Technologien, wie HTML5, JavaScript und CSS. Da
 \textbf{Hybrid\newline} 
 Hybrid Apps sind eine Mischung von Nativ und HTML5 Apps. Hybrid bietet das Beste aus beiden, schoen gebaute CSS layout und das schreiben kompatible HTML-Code, der auf jeder Plattgorm funktioniert.\nextline
 
-\todo{MELD: Kommt in Ch3}
-Schlussendlich entschieden wir uns fuer die Nativ Wariante, da wir gute Kenntnisse in Java haben und Nativ die Beste Performance fuer die Daarstellung der Daten hat.
->>>>>>> Reformatting
+
 \clearpage % DO NOT REMOVE
