added a couple of sentences

--- a/diplomarbeit/sections/ch1_introduction/bestshift.tex
+++ b/diplomarbeit/sections/ch1_introduction/bestshift.tex
@@ -10,8 +10,10 @@ Wodurch wir uns besonders hervorheben ist, dass wir das anlegen und verwalten vo
  
 
 Für die Smartphone Applikation wird ein Android Framework verwendet, 
-während die Hardware aus einem Single Board Computer (SBC) bestehen soll. 
+während die Hardware aus einem Single Board Computer (SBC) bestehen soll. Somit wird dem Nutzer ein genauerer Einblick in sein Fahrstil verschafft. 
 Mittels einem ODB-II zu Bluetooth Chip (ELM237) und Python, 
-werden Daten aus dem Motormanagement sowie eigene Sensordaten gesammelt und aufbereitet. 
-
+werden Daten aus dem Motormanagement sowie eigene Sensordaten, welche in einem selbstgemachtem Car-PC eingebaut sind,
+gesammelt und aufbereitet. 
+Die gesammelten Daten können dann von dem Smartphone aus in die Cloud geladen werden, welche dann durch unsere
+Webapplikation genauer inspiziert werden können.
 \clearpage % DO NOT REMOVE
