--- a/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
+++ b/diplomarbeit/sections/ch5_conclusio_outlook/outlook.tex
@@ -1,11 +1,10 @@
-\lfoot{Autor: Who?}
+\lfoot{Autor: Faiku Fitim}
 \subsection{Outlook und Verbesserungsmöglichkeiten}
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Weiterhin haben wir uns überlegt, die Web Applikation zu überarbeiten und weiter Funktionen hinzuzufügen.            
+Die Android App kann ebenfalls verbessert werden indem wir es so Programmieren, dass es auf mehreren Devices lauffähig ist. Die Potenziellen Kunden können ebenfalls angesprochen werden und es kann sich bis zu einem Geschäft entwickeln, in dem wir unser Produkt entweder an Fahrschulen oder Taxi-Unternehmen verkaufen.                  
+Ein weiterer Schritt wäre, dass wir uns von den "hohen" Kosten der Hardware-Komponenten trennen und dafür in großen Mengen einen Nachlass bekommen. 
+
+
 
 \clearpage % DO NOT REMOVE
